--- a/app.yaml
+++ b/app.yaml
@@ -15,7 +15,8 @@ handlers:
   static_dir: static/img
 - url: /js
   static_dir: static/js
-
+- url: /calc
+  static_dir: calc
 
 - url: .*
   script: main.app
